--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,8 @@
         </form>
         <div id="loginError" class="error-message"></div>
         <div class="info-text">
-          <p>💡 <strong>Giáo viên:</strong> Sử dụng mật khẩu giáo viên</p>
-          <p>📚 <strong>Học sinh:</strong> Sử dụng mật khẩu lớp học</p>
+          <p>💡 <strong>Giáo viên:</strong> Tất nhiên biết mật khẩu rồi</p>
+          <p>📚 <strong>Học sinh:</strong> Kiếm mật khẩu rồi vào làm lẹ lên</p>
         </div>
       </div>
     </div>
@@ -276,12 +276,12 @@
       `;
       
       box.innerHTML = `
-        <div style="font-size: 64px; margin-bottom: 20px;">🤣</div>
+        <div style="font-size: 64px; margin-bottom: 20px;"></div>
         <h2 style="font-size: 32px; color: #ef4444; margin-bottom: 20px; font-weight: bold;">
           BẠN THẬT SỰ CẦN GIÚP ĐỠ?
         </h2>
         <p style="font-size: 24px; color: #1e293b; line-height: 1.6; margin-bottom: 30px;">
-          Thì <strong style="color: #2563eb;">LA LÀNG LÊN</strong> vì tôi đang <strong style="color: #10b981;">TRƯỚC MẶT</strong> bạn 😂😂😂
+          Thì <strong style="color: #2563eb;">LA LÀNG LÊN</strong> vì tôi đang <strong style="color: #10b981;">TRƯỚC MẶT</strong>
         </p>
         <button id="closeHelp" style="
           background: linear-gradient(135deg, #ef4444, #dc2626);
@@ -295,7 +295,6 @@
           box-shadow: 0 4px 15px rgba(239, 68, 68, 0.4);
           transition: all 0.3s;
         ">
-          OK OK TÔI HIỂU RỒI 🙈
         </button>
       `;
       
