--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,13 @@
               <input type="number" id="variantCount" min="1" max="20" value="1" style="width:80px; padding:6px;">
               <small>Nhập số lượng mã đề muốn trộn</small>
             </div>
-
+            <div class="form-group">
+              <label style="display: flex; align-items: center; gap: 8px;">
+                <input type="checkbox" id="useAI" name="useAI" style="width: auto;">
+                <span>🤖 <strong>Parse bằng AI</strong> (chậm hơn nhưng chính xác 95%+)</span>
+              </label>
+              <small>Dùng Google Gemini AI để đọc công thức chính xác hơn</small>
+            </div>
             <div class="form-group">
               <label><strong>⚙️ Tùy chọn trộn phần 1:</strong></label>
               <select id="p1Mode">
