--- a/public/index.html
+++ b/public/index.html
@@ -290,7 +290,7 @@
           BẠN THẬT SỰ CẦN GIÚP ĐỠ?
         </h2>
         <p style="font-size: 24px; color: #1e293b; line-height: 1.6; margin-bottom: 30px;">
-          Thì <strong style="color: #2563eb;">LA LÀNG LÊN</strong> vì tôi đang <strong style="color: #10b981;">TRƯỚC MẶT</strong>
+          Thì <strong style="color: #2563eb;">LA LÊN</strong> vì tôi đang <strong style="color: #10b981;">TRƯỚC MẶT</strong>
         </p>
         <button id="closeHelp" style="
           background: linear-gradient(135deg, #ef4444, #dc2626);
