--- a/public/index.html
+++ b/public/index.html
@@ -5,28 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hệ Thống Kiểm Tra</title>
   <link rel="stylesheet" href="style.css"/>
-  <!-- MathJax (nếu bạn đã có renderMath wrapper) -->
-  <script>
-    window.renderMath = () => {
-      if (window.MathJax && window.MathJax.typesetPromise) {
-        window.MathJax.typesetPromise();
-      }
-    };
-  </script>
 </head>
 <body>
-  <!-- Toggle theme -->
-  <button class="theme-toggle" id="themeToggle">
-    <span class="theme-toggle-icon">🌗</span>
-    <span class="theme-toggle-text">Đổi giao diện</span>
+  <!-- Nút đổi giao diện -->
+  <button id="themeToggle" class="theme-toggle" aria-label="Đổi giao diện">
+    <span id="themeIcon">🌞</span>
+    <span id="themeText">Light</span>
   </button>
 
-  <!-- LOGIN PAGE -->
-  <section id="loginPage" class="active">
+  <!-- Giao diện đăng nhập -->
+  <main id="loginPage" class="login-layout">
+    <!-- Cột trái: Box đăng nhập -->
     <div class="login-left">
       <div class="login-box">
         <div class="logo">
-          <!-- icon -->
           <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
             <circle cx="12" cy="12" r="9"></circle>
             <path d="M8 12l2 2 4-4"></path>
@@ -56,196 +48,37 @@
       </div>
     </div>
 
+    <!-- Cột phải: Box video + tiện ích -->
     <div class="login-right">
-      <h2>Chào mừng đến hệ thống kiểm tra</h2>
-      <p>Giao diện mới mượt hơn, hỗ trợ dark mode, chỉnh sửa đề trực tiếp, upload ảnh cho câu hỏi/đáp án, và hiển thị công thức bằng MathJax.</p>
-
-      <div class="features-grid">
-        <div class="feature-card">
-          <div class="feature-icon">📝</div>
-          <h3>Chỉnh sửa đề trực tiếp</h3>
-          <p>Sửa nội dung câu hỏi, đáp án, câu hỏi con ngay trong modal chi tiết.</p>
-        </div>
-        <div class="feature-card">
-          <div class="feature-icon">📷</div>
-          <h3>Ảnh câu hỏi/đáp án</h3>
-          <p>Upload/xóa ảnh cho từng câu hỏi và từng đáp án.</p>
-        </div>
-        <div class="feature-card">
-          <div class="feature-icon">⏱️</div>
-          <h3>Đếm giờ</h3>
-          <p>Tự động nộp khi hết giờ hoặc vi phạm.</p>
-        </div>
-        <div class="feature-card">
-          <div class="feature-icon">∑</div>
-          <h3>MathJax</h3>
-          <p>Hiển thị công thức toán với cú pháp $...$.</p>
-        </div>
+      <div class="video-box">
+        <h2>Công Cụ Hỗ Trợ Học Tập</h2>
+        <iframe
+          width="100%"
+          height="220"
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1"
+          title="Video hỗ trợ học tập"
+          frameborder="0"
+          allow="autoplay; encrypted-media"
+          allowfullscreen
+        ></iframe>
       </div>
 
-      <div class="quick-links">
-        <h3>Liên kết nhanh</h3>
-        <div class="links-list">
-          <a class="quick-link" href="#">📚 Hướng dẫn</a>
-          <a class="quick-link" href="#">🛠️ Cấu hình</a>
-          <a class="quick-link" href="#">💬 Góp ý</a>
-        </div>
+      <div class="tools-grid">
+        <a href="https://www.google.com" target="_blank" class="tool-card">🔍 Google</a>
+        <a href="https://www.youtube.com" target="_blank" class="tool-card">📺 YouTube</a>
+        <a href="https://zoom.us" target="_blank" class="tool-card">🎥 Zoom</a>
+        <a href="https://teams.microsoft.com" target="_blank" class="tool-card">👥 Teams</a>
+        <a href="https://slides.google.com" target="_blank" class="tool-card">🖼️ Tạo Slide</a>
+        <a href="https://www.desmos.com/calculator" target="_blank" class="tool-card">🧮 Máy tính</a>
       </div>
     </div>
-  </section>
+  </main>
 
-  <!-- TEACHER PAGE -->
-  <section id="teacherPage" style="display:none;">
-    <div class="container">
-      <div class="header">
-        <h2>Bảng điều khiển giáo viên</h2>
-        <button id="logoutTeacher" class="btn">Đăng xuất</button>
-      </div>
-
-      <div class="dashboard">
-        <div class="card">
-          <h3>Upload đề thi</h3>
-          <form id="uploadForm">
-            <div class="form-group">
-              <label>File đề thi</label>
-              <input type="file" id="examFile" accept=".docx,.pdf,.txt,.json"/>
-            </div>
-            <div class="form-row">
-              <div class="form-group">
-                <label>Thời gian (phút)</label>
-                <input type="number" id="timeMinutes" min="10" value="45"/>
-              </div>
-              <div class="form-group">
-                <label>Mật khẩu đề (tuỳ chọn)</label>
-                <input type="text" id="examPassword" placeholder="Để trống nếu không dùng"/>
-              </div>
-            </div>
-            <div class="form-row">
-              <div class="form-group">
-                <label>Số phiên bản</label>
-                <input type="number" id="variantCount" min="1" value="1"/>
-              </div>
-              <div class="form-group">
-                <label>Chế độ P1/P2/P3</label>
-                <div class="form-row">
-                  <select id="p1Mode">
-                    <option value="none">Không</option>
-                    <option value="shuffle">Trộn</option>
-                  </select>
-                  <select id="p2Mode">
-                    <option value="none">Không</option>
-                    <option value="shuffle">Trộn</option>
-                  </select>
-                  <select id="p3Mode">
-                    <option value="none">Không</option>
-                    <option value="shuffle">Trộn</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class="form-group">
-              <label><input type="checkbox" id="useAI"/> Dùng AI hỗ trợ phân tích</label>
-            </div>
-            <button class="btn btn-primary" type="submit">Upload</button>
-            <div id="uploadMessage" class="message" style="display:none;"></div>
-          </form>
-        </div>
-
-        <div class="card">
-          <h3>Danh sách đề thi</h3>
-          <div id="examList" class="exams-list"></div>
-        </div>
-
-        <div class="card">
-          <h3>Bài nộp gần đây</h3>
-          <div id="submissionsList" class="submissions-list"></div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- STUDENT INFO PAGE -->
-  <section id="studentInfoPage" style="display:none;">
-    <div class="student-form-container">
-      <div class="card">
-        <h3>Thông tin học sinh</h3>
-        <form id="studentInfoForm">
-          <div class="form-group">
-            <label>Lớp</label>
-            <input type="text" id="studentClass" readonly/>
-          </div>
-          <div class="form-group">
-            <label>Họ và tên</label>
-            <input type="text" id="studentName" placeholder="VD: Nguyễn Văn A"/>
-          </div>
-          <div class="form-group">
-            <label>Ngày sinh (dd/mm/yyyy)</label>
-            <input type="text" id="studentDOB" placeholder="VD: 01/01/2008"/>
-            <small>Nhập đúng định dạng dd/mm/yyyy</small>
-          </div>
-          <div id="examPasswordGroup" class="form-group" style="display:none;">
-            <label>Mật khẩu đề thi</label>
-            <input type="password" id="studentExamPassword" placeholder="Nhập mật khẩu đề"/>
-          </div>
-          <button class="btn btn-primary" type="submit">Vào làm bài</button>
-          <div id="studentInfoError" class="error-message"></div>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <!-- EXAM PAGE -->
-  <section id="examPage" style="display:none;">
-    <div class="container">
-      <div class="exam-header">
-        <div class="exam-info">
-          <h2 id="examTitle">Đề thi</h2>
-          <p id="studentInfo">Học sinh - Lớp</p>
-        </div>
-        <div class="timer-container">
-          <div id="timer" class="timer">00:00</div>
-          <div id="warningMessage" class="warning-message"></div>
-        </div>
-      </div>
-
-      <div class="exam-content">
-        <div id="questionsContainer" class="questions-container"></div>
-        <button id="submitBtn" class="btn btn-primary btn-submit">Nộp bài</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- RESULT PAGE -->
-  <section id="resultPage" style="display:none;">
-    <div class="container">
-      <div class="result-container">
-        <div class="result-icon">🎉</div>
-        <h2 id="resultMessage">Nộp bài thành công!</h2>
-        <div id="scoreDisplay" class="score-display">Chờ chấm điểm</div>
-        <button id="logoutStudent" class="btn">Về trang chủ</button>
-      </div>
-    </div>
-  </section>
-
-  <!-- MODAL CHI TIẾT ĐỀ -->
-  <div id="examDetailModal" class="modal">
-    <div class="modal-content">
-      <button id="closeModal" class="close">✕</button>
-      <h2>Chi tiết đề thi</h2>
-      <div id="examDetailContent"></div>
-      <div class="modal-actions">
-        <button id="saveAnswers" class="btn btn-primary">Lưu đáp án đúng</button>
-        <button id="sendReport" class="btn">Gửi báo cáo lớp</button>
-        <button id="deleteExam" class="btn">Xóa đề</button>
-      </div>
-    </div>
-  </div>
-
-  <!-- FOOTER -->
-  <div class="footer">
+  <!-- Footer luôn ở cuối -->
+  <footer class="footer">
     <p>NMT – Dùng AI code ra web này đó</p>
-    <button id="backToHome" class="btn">Wanna Help</button>
-  </div>
+    <button class="btn btn-outline">Wanna Help</button>
+  </footer>
 
   <script src="main.js"></script>
 </body>
