--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,9 @@
   </button>
 
   <!-- LOGIN PAGE -->
-  <section id="loginPage" class="active">
+<section id="loginPage" class="page active">
+  <div class="login-wrapper">
+    <!-- BÊN TRÁI: LOGIN BOX -->
     <div class="login-left">
       <div class="login-box">
         <div class="logo">
@@ -56,103 +58,111 @@
           <div class="input-group">
             <input id="passwordInput" type="password" placeholder="Mật khẩu..." autocomplete="current-password"/>
             <button type="button" id="togglePassword" class="toggle-password" aria-label="Ẩn/Hiện mật khẩu">
-              <svg id="eyeIcon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                <path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"/>
-                <circle cx="12" cy="12" r="3"/>
-              </svg>
+              <span class="eye-open">👁️</span>
+              <span class="eye-closed">👁️‍🗨️</span>
             </button>
           </div>
-          <button id="loginBtn" class="btn btn-primary" type="submit">Đăng nhập</button>
+          <button id="loginBtn" class="btn btn-primary" type="submit">
+            <span class="btn-text">Đăng nhập</span>
+            <span class="btn-loader">⏳</span>
+          </button>
           <div id="loginError" class="error-message"></div>
         </form>
 
         <div class="info-text">
-          <p>👨‍🏫 <strong>Giáo viên:</strong> Tất nhiên biết mật khẩu rồi</p>
-          <p>👩‍🎓 <strong>Học sinh:</strong> Kiếm mật khẩu rồi vào làm lẹ lên</p>
+          <p><span class="info-icon">👨‍🏫</span> <strong>Giáo viên:</strong> Tất nhiên biết mật khẩu rồi</p>
+          <p><span class="info-icon">👩‍🎓</span> <strong>Học sinh:</strong> Kiếm mật khẩu rồi vào làm lẹ lên</p>
         </div>
       </div>
     </div>
 
+    <!-- BÊN PHẢI: VIDEO & TOOLS -->
     <div class="login-right">
-      <h2>Công Cụ Hỗ Trợ Học Tập</h2>
-      
-      <!-- Video YouTube -->
-      <div class="video-container">
-        <iframe 
-          id="youtubeVideo"
-          src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
-          title="Video hướng dẫn"
-          frameborder="0" 
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-          allowfullscreen>
-        </iframe>
+      <div class="content-wrapper">
+        <h2>Công Cụ Hỗ Trợ Học Tập</h2>
+        
+        <!-- Video YouTube -->
+        <div class="video-wrapper">
+          <div class="video-container">
+            <iframe 
+              id="youtubeVideo"
+              src="" 
+              title="Video hướng dẫn"
+              frameborder="0" 
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+              allowfullscreen>
+            </iframe>
+          </div>
+        </div>
+
+        <h3 class="section-title">Công Cụ Hỗ Trợ 1ặc</h3>
+        <div class="tools-grid">
+          <a href="https://google.com" target="_blank" class="tool-card google-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M12.48 10.92v3.28h7.84c-.24 1.84-.853 3.187-1.787 4.133-1.147 1.147-2.933 2.4-6.053 2.4-4.827 0-8.6-3.893-8.6-8.72s3.773-8.72 8.6-8.72c2.6 0 4.507 1.027 5.907 2.347l2.307-2.307C18.747 1.44 16.133 0 12.48 0 5.867 0 .307 5.387.307 12s5.56 12 12.173 12c3.573 0 6.267-1.173 8.373-3.36 2.16-2.16 2.84-5.213 2.84-7.667 0-.76-.053-1.467-.173-2.053H12.48z"/>
+              </svg>
+            </div>
+            <span class="tool-name">Google</span>
+          </a>
+
+          <a href="https://youtube.com" target="_blank" class="tool-card youtube-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
+              </svg>
+            </div>
+            <span class="tool-name">YouTube</span>
+          </a>
+
+          <a href="https://docs.google.com/presentation" target="_blank" class="tool-card slides-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"/>
+                <path d="M8 15h8v2H8z"/>
+              </svg>
+            </div>
+            <span class="tool-name">Tạo Slide</span>
+          </a>
+
+          <a href="https://zoom.us" target="_blank" class="tool-card zoom-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H6zm0 2h12v16H6V4zm2 2v2h8V6H8zm0 4v2h8v-2H8zm0 4v2h5v-2H8z"/>
+              </svg>
+            </div>
+            <span class="tool-name">Zoom</span>
+          </a>
+
+          <a href="https://teams.microsoft.com" target="_blank" class="tool-card teams-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M20.625 8.25h-5.625v-5.625c0-0.621-0.504-1.125-1.125-1.125h-7.5c-0.621 0-1.125 0.504-1.125 1.125v13.5c0 0.621 0.504 1.125 1.125 1.125h7.5c0.621 0 1.125-0.504 1.125-1.125v-2.625h5.625c0.621 0 1.125-0.504 1.125-1.125v-3c0-0.621-0.504-1.125-1.125-1.125z"/>
+              </svg>
+            </div>
+            <span class="tool-name">MS Teams</span>
+          </a>
+
+          <a href="https://www.wolframalpha.com" target="_blank" class="tool-card calculator-tool">
+            <div class="tool-icon">
+              <svg viewBox="0 0 24 24" fill="currentColor">
+                <path d="M7 2h10a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v4h10V4H7zm0 6v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h6v-2H7zm8 0v2h2v-2h-2z"/>
+              </svg>
+            </div>
+            <span class="tool-name">Máy tính</span>
+          </a>
+        </div>
       </div>
 
-      <h3 class="section-title">Công Cụ Hỗ Trợ 1ặc</h3>
-      <div class="tools-grid">
-        <a href="https://google.com" target="_blank" class="tool-card">
-          <div class="tool-icon google">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M12.48 10.92v3.28h7.84c-.24 1.84-.853 3.187-1.787 4.133-1.147 1.147-2.933 2.4-6.053 2.4-4.827 0-8.6-3.893-8.6-8.72s3.773-8.72 8.6-8.72c2.6 0 4.507 1.027 5.907 2.347l2.307-2.307C18.747 1.44 16.133 0 12.48 0 5.867 0 .307 5.387.307 12s5.56 12 12.173 12c3.573 0 6.267-1.173 8.373-3.36 2.16-2.16 2.84-5.213 2.84-7.667 0-.76-.053-1.467-.173-2.053H12.48z"/>
-            </svg>
-          </div>
-          <span>Google</span>
-        </a>
-
-        <a href="https://youtube.com" target="_blank" class="tool-card">
-          <div class="tool-icon youtube">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-            </svg>
-          </div>
-          <span>YouTube</span>
-        </a>
-
-        <a href="https://docs.google.com/presentation" target="_blank" class="tool-card">
-          <div class="tool-icon slides">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"/>
-              <path d="M8 15h8v2H8z"/>
-            </svg>
-          </div>
-          <span>Tạo Slide</span>
-        </a>
-
-        <a href="https://zoom.us" target="_blank" class="tool-card">
-          <div class="tool-icon zoom">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H6zm0 2h12v16H6V4zm2 2v2h8V6H8zm0 4v2h8v-2H8zm0 4v2h5v-2H8z"/>
-            </svg>
-          </div>
-          <span>Zoom</span>
-        </a>
-
-        <a href="https://teams.microsoft.com" target="_blank" class="tool-card">
-          <div class="tool-icon teams">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M20.625 8.25h-5.625v-5.625c0-0.621-0.504-1.125-1.125-1.125h-7.5c-0.621 0-1.125 0.504-1.125 1.125v13.5c0 0.621 0.504 1.125 1.125 1.125h7.5c0.621 0 1.125-0.504 1.125-1.125v-2.625h5.625c0.621 0 1.125-0.504 1.125-1.125v-3c0-0.621-0.504-1.125-1.125-1.125z"/>
-            </svg>
-          </div>
-          <span>MS Teams</span>
-        </a>
-
-        <a href="https://www.wolframalpha.com" target="_blank" class="tool-card">
-          <div class="tool-icon calculator">
-            <svg viewBox="0 0 24 24" fill="currentColor">
-              <path d="M7 2h10a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v4h10V4H7zm0 6v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h6v-2H7zm8 0v2h2v-2h-2z"/>
-            </svg>
-          </div>
-          <span>Máy tính</span>
-        </a>
+      <!-- FOOTER -->
+      <div class="footer">
+        <p>NMT – Dùng AI code ra web này đó</p>
+        <button id="backToHome" class="btn btn-footer">Wanna Help</button>
       </div>
     </div>
-
-    <!-- FOOTER -->
-    <div class="footer">
-      <p>NMT – Dùng AI code ra web này đó</p>
-      <button id="backToHome" class="btn"><span>Wanna Help</span></button>
-    </div>
-  </section>
+  </div>
+</section>
+  
 
   <!-- TEACHER PAGE -->
   <section id="teacherPage" style="display:none;">
