--- a/public/index.html
+++ b/public/index.html
@@ -34,10 +34,10 @@
 <body>
   
   <!-- Theme Toggle -->
-  <button class="theme-toggle" id="themeToggle">
-    <span class="theme-toggle-icon">☀️</span>
-    <span class="theme-toggle-text">Light</span>
-  </button>
+<button class="theme-toggle" id="themeToggle">
+  <span class="sun-icon">☀️</span>
+  <span class="moon-icon">🌙</span>
+</button>
 
   <!-- LOGIN PAGE -->
 <section id="loginPage" class="page active">
