--- a/public/index.html
+++ b/public/index.html
@@ -5,165 +5,121 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Hệ Thống Kiểm Tra</title>
   <link rel="stylesheet" href="style.css"/>
+
   <script>
+    // MathJax
     window.MathJax = {
       tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']],
-        displayMath: [['$$', '$$'], ['\\[', '\\]']],
+        displayMath: [['$$', '$$'], ['\
+
+\[', '\\]
+
+']],
         processEscapes: true
       },
-      options: {
-        skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre']
-      },
+      options: { skipHtmlTags: ['script','noscript','style','textarea','pre'] },
       startup: {
-        pageReady: () => {
-          return MathJax.startup.defaultPageReady().then(() => {
-            console.log('✅ MathJax loaded');
-          });
-        }
+        pageReady: () => MathJax.startup.defaultPageReady().then(() => console.log('✅ MathJax loaded'))
       }
     };
-    window.renderMath = () => {
-      if (window.MathJax && window.MathJax.typesetPromise) {
-        MathJax.typesetPromise();
-      }
+    window.renderMath = () => window.MathJax?.typesetPromise?.();
+
+    // ENV: có thể override bằng biến môi trường Render (inject vào window.ENV)
+    window.ENV = {
+      // YouTube: chọn 1 video mặc định (Sealock hoặc bất kỳ)
+      YOUTUBE_VIDEO_ID: 'kQKkGqZf3nE', // bạn thay ID tại Render: ENV.YOUTUBE_VIDEO_ID
+      // Tools: nếu không set ENV.TOOLS thì dùng mặc định dưới
+      TOOLS: [
+        { name: 'Google', url: 'https://google.com', icon: 'google' },
+        { name: 'YouTube', url: 'https://youtube.com', icon: 'youtube' },
+        { name: 'Tạo Slide', url: 'https://docs.google.com/presentation', icon: 'slides' },
+        { name: 'Zoom', url: 'https://zoom.us', icon: 'zoom' },
+        { name: 'MS Teams', url: 'https://teams.microsoft.com', icon: 'teams' },
+        { name: 'Máy tính', url: 'https://www.wolframalpha.com', icon: 'calculator' }
+      ],
+      // Troll video (giữ nguyên link nổi tiếng)
+      TROLL_VIDEO_ID: 'dQw4w9WgXcQ'
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
 </head>
 <body>
-  
   <!-- Theme Toggle -->
-<button class="theme-toggle" id="themeToggle">
-  <span class="sun-icon">☀️</span>
-  <span class="moon-icon">🌙</span>
-</button>
-
+  <button class="theme-toggle" id="themeToggle" aria-label="Đổi giao diện">
+    <span class="theme-label">Light</span>
+    <span class="theme-icon">☀️</span>
+  </button>
   <!-- LOGIN PAGE -->
-<section id="loginPage" class="page active">
-  <div class="login-wrapper">
-    <!-- BÊN TRÁI: LOGIN BOX -->
-    <div class="login-left">
-      <div class="login-box">
-        <div class="logo">
-          <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
-            <circle cx="12" cy="12" r="9"></circle>
-            <path d="M8 12l2 2 4-4"></path>
-          </svg>
-        </div>
-        <h1>Hệ Thống Kiểm Tra</h1>
-        <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
+  <section id="loginPage" class="page active">
+    <div class="login-wrapper">
+      <!-- Trái: Login Box -->
+      <div class="login-left">
+        <div class="login-box">
+          <div class="logo">
+            <svg viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+              <circle cx="12" cy="12" r="9"></circle>
+              <path d="M8 12l2 2 4-4"></path>
+            </svg>
+          </div>
+          <h1>Hệ Thống Kiểm Tra</h1>
+          <p class="subtitle">Nhập mật khẩu để tiếp tục</p>
 
-        <form id="loginForm">
-          <div class="input-group">
-            <input id="passwordInput" type="password" placeholder="Mật khẩu..." autocomplete="current-password"/>
-            <button type="button" id="togglePassword" class="toggle-password" aria-label="Ẩn/Hiện mật khẩu">
-              <span class="eye-open">👁️</span>
-              <span class="eye-closed">👁️‍🗨️</span>
+          <form id="loginForm">
+            <div class="input-group">
+              <input id="passwordInput" type="password" placeholder="Mật khẩu..." autocomplete="current-password"/>
+              <button type="button" id="togglePassword" class="toggle-password" aria-label="Ẩn/Hiện mật khẩu">
+                <span class="eye-open">👁️</span>
+                <span class="eye-closed" style="display:none;">👁️‍🗨️</span>
+              </button>
+            </div>
+            <button id="loginBtn" class="btn btn-primary" type="submit">
+              <span class="btn-text">Đăng nhập</span>
+              <span class="btn-loader">⏳</span>
             </button>
-          </div>
-          <button id="loginBtn" class="btn btn-primary" type="submit">
-            <span class="btn-text">Đăng nhập</span>
-            <span class="btn-loader">⏳</span>
-          </button>
-          <div id="loginError" class="error-message"></div>
-        </form>
+            <div id="loginError" class="error-message"></div>
+          </form>
 
-        <div class="info-text">
-          <p><span class="info-icon">👨‍🏫</span> <strong>Giáo viên:</strong> Tất nhiên biết mật khẩu rồi</p>
-          <p><span class="info-icon">👩‍🎓</span> <strong>Học sinh:</strong> Kiếm mật khẩu rồi vào làm lẹ lên</p>
+          <div class="info-text">
+            <p><span class="info-icon">👨‍🏫</span> <strong>Giáo viên:</strong> Tất nhiên biết mật khẩu rồi</p>
+            <p><span class="info-icon">👩‍🎓</span> <strong>Học sinh:</strong> Kiếm mật khẩu rồi vào làm lẹ lên</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Phải: YouTube + Tools -->
+      <div class="login-right">
+        <div class="content-wrapper">
+          <h2>Công Cụ Hỗ Trợ Học Tập</h2>
+
+          <!-- Video YouTube (Sealock hoặc video ENV) -->
+          <div class="video-wrapper">
+            <div class="video-container">
+              <iframe 
+                id="youtubeVideo"
+                src="" 
+                title="Video hướng dẫn"
+                frameborder="0" 
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+              </iframe>
+            </div>
+          </div>
+
+          <h3 class="section-title">Công cụ nhanh</h3>
+          <div id="toolsGrid" class="tools-grid">
+            <!-- Sẽ render từ ENV.TOOLS trong main.js -->
+          </div>
+        </div>
+
+        <!-- FOOTER -->
+        <div class="footer">
+          <p>NMT – Dùng AI code ra web này đó</p>
+          <button id="backToHome" class="btn btn-footer">Wanna Help</button>
         </div>
       </div>
     </div>
-
-    <!-- BÊN PHẢI: VIDEO & TOOLS -->
-    <div class="login-right">
-      <div class="content-wrapper">
-        <h2>Công Cụ Hỗ Trợ Học Tập</h2>
-        
-        <!-- Video YouTube -->
-        <div class="video-wrapper">
-          <div class="video-container">
-            <iframe 
-              id="youtubeVideo"
-              src="" 
-              title="Video hướng dẫn"
-              frameborder="0" 
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
-              allowfullscreen>
-            </iframe>
-          </div>
-        </div>
-
-        <h3 class="section-title">Công Cụ Hỗ Trợ 1ặc</h3>
-        <div class="tools-grid">
-          <a href="https://google.com" target="_blank" class="tool-card google-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M12.48 10.92v3.28h7.84c-.24 1.84-.853 3.187-1.787 4.133-1.147 1.147-2.933 2.4-6.053 2.4-4.827 0-8.6-3.893-8.6-8.72s3.773-8.72 8.6-8.72c2.6 0 4.507 1.027 5.907 2.347l2.307-2.307C18.747 1.44 16.133 0 12.48 0 5.867 0 .307 5.387.307 12s5.56 12 12.173 12c3.573 0 6.267-1.173 8.373-3.36 2.16-2.16 2.84-5.213 2.84-7.667 0-.76-.053-1.467-.173-2.053H12.48z"/>
-              </svg>
-            </div>
-            <span class="tool-name">Google</span>
-          </a>
-
-          <a href="https://youtube.com" target="_blank" class="tool-card youtube-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/>
-              </svg>
-            </div>
-            <span class="tool-name">YouTube</span>
-          </a>
-
-          <a href="https://docs.google.com/presentation" target="_blank" class="tool-card slides-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm4 18H6V4h7v5h5v11z"/>
-                <path d="M8 15h8v2H8z"/>
-              </svg>
-            </div>
-            <span class="tool-name">Tạo Slide</span>
-          </a>
-
-          <a href="https://zoom.us" target="_blank" class="tool-card zoom-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M6 2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H6zm0 2h12v16H6V4zm2 2v2h8V6H8zm0 4v2h8v-2H8zm0 4v2h5v-2H8z"/>
-              </svg>
-            </div>
-            <span class="tool-name">Zoom</span>
-          </a>
-
-          <a href="https://teams.microsoft.com" target="_blank" class="tool-card teams-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M20.625 8.25h-5.625v-5.625c0-0.621-0.504-1.125-1.125-1.125h-7.5c-0.621 0-1.125 0.504-1.125 1.125v13.5c0 0.621 0.504 1.125 1.125 1.125h7.5c0.621 0 1.125-0.504 1.125-1.125v-2.625h5.625c0.621 0 1.125-0.504 1.125-1.125v-3c0-0.621-0.504-1.125-1.125-1.125z"/>
-              </svg>
-            </div>
-            <span class="tool-name">MS Teams</span>
-          </a>
-
-          <a href="https://www.wolframalpha.com" target="_blank" class="tool-card calculator-tool">
-            <div class="tool-icon">
-              <svg viewBox="0 0 24 24" fill="currentColor">
-                <path d="M7 2h10a2 2 0 0 1 2 2v16a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2zm0 2v4h10V4H7zm0 6v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h2v-2H7zm4 0v2h2v-2h-2zm4 0v2h2v-2h-2zm-8 4v2h6v-2H7zm8 0v2h2v-2h-2z"/>
-              </svg>
-            </div>
-            <span class="tool-name">Máy tính</span>
-          </a>
-        </div>
-      </div>
-
-      <!-- FOOTER -->
-      <div class="footer">
-        <p>NMT – Dùng AI code ra web này đó</p>
-        <button id="backToHome" class="btn btn-footer">Wanna Help</button>
-      </div>
-    </div>
-  </div>
-</section>
-  
-
+  </section>
   <!-- TEACHER PAGE -->
   <section id="teacherPage" style="display:none;">
     <div class="container">
@@ -180,6 +136,7 @@
               <label>File đề thi</label>
               <input type="file" id="examFile" accept=".docx,.pdf,.txt,.json"/>
             </div>
+
             <div class="form-row">
               <div class="form-group">
                 <label>Thời gian (phút)</label>
@@ -190,36 +147,46 @@
                 <input type="text" id="examPassword" placeholder="Để trống nếu không dùng"/>
               </div>
             </div>
+
+            <!-- Làm rõ các tùy biến trộn đề -->
+            <div class="form-row">
+              <div class="form-group">
+                <label>Phần 1: Trộn</label>
+                <select id="p1Mode">
+                  <option value="none">Không</option>
+                  <option value="questions">Trộn câu hỏi</option>
+                  <option value="options">Trộn đáp án</option>
+                  <option value="both">Trộn cả câu hỏi và đáp án</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Phần 2: Trộn</label>
+                <select id="p2Mode">
+                  <option value="none">Không</option>
+                  <option value="questions">Trộn câu hỏi & giữ nguyên thứ tự câu dẫn</option>
+                  <option value="subquestions">Trộn cả câu hỏi và câu dẫn trong từng câu</option>
+                  <option value="both">Trộn cả 2 (nếu hệ thống hỗ trợ)</option>
+                </select>
+              </div>
+              <div class="form-group">
+                <label>Phần 3: Trộn</label>
+                <select id="p3Mode">
+                  <option value="none">Không</option>
+                  <option value="questions">Trộn câu hỏi</option>
+                </select>
+              </div>
+            </div>
+
             <div class="form-row">
               <div class="form-group">
                 <label>Số phiên bản</label>
                 <input type="number" id="variantCount" min="1" value="1"/>
               </div>
               <div class="form-group">
-                <label>Chế độ P1/P2/P3</label>
-                <div class="form-row">
-                  <select id="p1Mode">
-                    <option value="none">Không</option>
-                    <option value="questions">Trộn câu</option>
-                    <option value="options">Trộn đáp án</option>
-                    <option value="both">Trộn cả 2</option>
-                  </select>
-                  <select id="p2Mode">
-                    <option value="none">Không</option>
-                    <option value="questions">Trộn câu</option>
-                    <option value="subquestions">Trộn thứ tự</option>
-                    <option value="both">Trộn cả 2</option>
-                  </select>
-                  <select id="p3Mode">
-                    <option value="none">Không</option>
-                    <option value="questions">Trộn câu</option>
-                  </select>
-                </div>
+                <label><input type="checkbox" id="useAI"/> Dùng AI hỗ trợ phân tích</label>
               </div>
             </div>
-            <div class="form-group">
-              <label><input type="checkbox" id="useAI"/> Dùng AI hỗ trợ phân tích</label>
-            </div>
+
             <button class="btn btn-primary" type="submit">Upload</button>
             <div id="uploadMessage" class="message" style="display:none;"></div>
           </form>
@@ -236,90 +203,19 @@
         </div>
       </div>
     </div>
-    
+
     <div class="footer">
       <p>NMT – Dùng AI code ra web này đó</p>
       <button id="backToHomeTeacher" class="btn"><span>Wanna Help</span></button>
     </div>
   </section>
+
   <!-- STUDENT INFO PAGE -->
-  <section id="studentInfoPage" style="display:none;">
-    <div class="student-form-container">
-      <div class="card">
-        <h3>Thông tin học sinh</h3>
-        <form id="studentInfoForm">
-          <div class="form-group">
-            <label>Lớp</label>
-            <input type="text" id="studentClass" readonly/>
-          </div>
-          <div class="form-group">
-            <label>Họ và tên</label>
-            <input type="text" id="studentName" placeholder="VD: Nguyễn Văn A"/>
-          </div>
-          <div class="form-group">
-            <label>Ngày sinh (dd/mm/yyyy)</label>
-            <input type="text" id="studentDOB" placeholder="VD: 01/01/2008"/>
-            <small>Nhập đúng định dạng dd/mm/yyyy</small>
-          </div>
-          <div id="examPasswordGroup" class="form-group" style="display:none;">
-            <label>Mật khẩu đề thi</label>
-            <input type="password" id="studentExamPassword" placeholder="Nhập mật khẩu đề"/>
-          </div>
-          <button class="btn btn-primary" type="submit">Vào làm bài</button>
-          <div id="studentInfoError" class="error-message"></div>
-        </form>
-      </div>
-    </div>
-
-    <div class="footer">
-      <p>NMT – Dùng AI code ra web này đó</p>
-      <button id="backToHomeStudent" class="btn"><span>Wanna Help</span></button>
-    </div>
-  </section>
-
+  <!-- (giữ nguyên như bạn gửi) -->
   <!-- EXAM PAGE -->
-  <section id="examPage" style="display:none;">
-    <div class="container">
-      <div class="exam-header">
-        <div class="exam-info">
-          <h2 id="examTitle">Đề thi</h2>
-          <p id="studentInfo">Học sinh - Lớp</p>
-        </div>
-        <div class="timer-container">
-          <div id="timer" class="timer">00:00</div>
-          <div id="warningMessage" class="warning-message"></div>
-        </div>
-      </div>
-
-      <div class="exam-content">
-        <div id="questionsContainer" class="questions-container"></div>
-        <button id="submitBtn" class="btn btn-primary btn-submit">Nộp bài</button>
-      </div>
-    </div>
-
-    <div class="footer">
-      <p>NMT – Dùng AI code ra web này đó</p>
-      <button id="backToHomeExam" class="btn"><span>Wanna Help</span></button>
-    </div>
-  </section>
-
+  <!-- (giữ nguyên như bạn gửi) -->
   <!-- RESULT PAGE -->
-  <section id="resultPage" style="display:none;">
-    <div class="container">
-      <div class="result-container">
-        <div class="result-icon">🎉</div>
-        <h2 id="resultMessage">Nộp bài thành công!</h2>
-        <div id="scoreDisplay" class="score-display">Chờ chấm điểm</div>
-        <button id="logoutStudent" class="btn">Về trang chủ</button>
-      </div>
-    </div>
-
-    <div class="footer">
-      <p>NMT – Dùng AI code ra web này đó</p>
-      <button id="backToHomeResult" class="btn"><span>Wanna Help</span></button>
-    </div>
-  </section>
-
+  <!-- (giữ nguyên như bạn gửi) -->
   <!-- MODAL CHI TIẾT ĐỀ -->
   <div id="examDetailModal" class="modal">
     <div class="modal-content">
